--- a/_includes/snippets/links-card.njk
+++ b/_includes/snippets/links-card.njk
@@ -5,19 +5,19 @@
     </p>
 		<div class="columns">
 			<div class="column">
-					<a class="button is-fullwidth is-link" href="https://docs.fancysafebot.com">
+					<a href="https://docs.fancysafebot.com">
 						{% icon "lucide:book" %}
 						<br>Documentation
 					</a>
 			</div>
 			<div class="column">
-					<a class="button is-fullwidth is-link" href="https://github.com/fancysafebot/fancysafebotlib/docs/topics/Tutorials.md">
+					<a href="https://docs.fancysafebot.com/tutorials.html">
 						{% icon "lucide:school" %}
 						<br>Tutorials
 					</a>
 			</div>
 			<div class="column">
-					<a class="button is-fullwidth is-link" href="https://github.com/fancysafebot/fancysafebotlib">
+					<a href="https://github.com/FancySafeBot/fsb-library">
 						{% icon "lucide:github" %}
 						<br>Source Code
 					</a>
