--- a/_includes/snippets/splash-hero.njk
+++ b/_includes/snippets/splash-hero.njk
@@ -10,7 +10,7 @@
       </div>
       <div class="column is-one-third">
         <figure class="image hero-image">
-          <img src="img/FSB_logo_arm.svg" alt="Fancy Safe Bot logo" width="800px"/>
+          <img src="img/FSB_logo_arm.svg" alt="Fancy Safe Bot logo" width="800px" loading="eager" />
         </figure>
       </div>
     </div>
