--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -9,7 +9,8 @@ title: Fancy Safe Bot
 		<meta name="color-scheme" content="dark light">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hack-font/3.3.0/web/hack.min.css" integrity="sha512-XgCw4Srl8lC1ECwcaHwAU0WnxQwHkqmInzg9wJLtGB7DRuMaXPuK2k9WJ2AwRDGdrgK9eJpZl2hUlLi2WQssmw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/inter-ui/4.1.0/inter.min.css" integrity="sha512-XD/ZWPxJjHT4yMgqT8cn3649HjjeQMGE/A4jWZnxxypfDQRKL0sSY/rrRF0AG4r4W1/85kPHUo/KMHYyE7g9Fw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-		<link href="https://fonts.cdnfonts.com/css/sofia-sans-extra-condensed" rel="stylesheet">
+		{# <link href="https://fonts.cdnfonts.com/css/sofia-sans-extra-condensed" rel="stylesheet"> #}
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fontsource/sofia-sans-extra-condensed@5.1.1/index.min.css" />
 		<link rel="stylesheet" href="/css/prism-atom-dark.css">
 		<link rel="stylesheet" href="/css/theme.css">
     <title>{{ title }}</title>
